--- a/app/tpl/login.html
+++ b/app/tpl/login.html
@@ -1,5 +1,5 @@
 <html lang="en"><head>
-    <title>Login</title>
+    <title>Guard ‒ Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/tpl/favicon.ico" type="image/x-icon">
